[package]
# Cron for containers
name = "cfc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A crontab replacement for container environment"
repository = "https://github.com/ayowel/cfc"
categories = ["command-line-utilities"]
keywords = ["cron", "ofelia", "crontab"]
exclude = ["/.gitignore", "/.github"]

[features]
default = ["bin", "ini", "labels", "yaml"]
ini = ["dep:ini_core"]
labels = ["dep:json"]
yaml = ["dep:saphyr-parser"]
bin = ["dep:clap", "dep:tracing-subscriber"]

[[bin]]
name = "cfc"
path = "src/bin/main.rs"
required-features = ["bin"]

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.82"
bollard = "0.16.1"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"], optional = true }
croner = "2.0.4"
futures-util = "0.3.30"
ini_core = { version = "0.2.0", optional = true }
json = { version = "0.12.4", optional = true }
regex = { version = "1.10.4" }
saphyr-parser = { version = "0.0.1", optional = true }
tokio = { version = "1.37.0", features = ["fs", "macros", "process", "rt", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", optional = true }
